Hide scrollbar for tracker v2 until we can fix it

--- a/desktop/renderer/style.css
+++ b/desktop/renderer/style.css
@@ -131,3 +131,8 @@ body {
 .hover-underline:hover {
   text-decoration: underline;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+	display: none;
+	width: 0;
+}
